--- a/core-marker-app/src/components/Signup.css
+++ b/core-marker-app/src/components/Signup.css
@@ -29,6 +29,8 @@ html {
 /* Centering the signup container */
 .signup-container {
   width: 300px;
+  position: relative;
+  left: 120px;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
